# xbmc-addon-vuplus

./: .gitignore  ChangeLog  Makefile.am  README  buildzip.bat  configure.in  xbmc-addon-vuplus.sln  xbmc-addon-vuplus.vcxproj  xbmc-addon-vuplus.vcxproj.filters
addons/: Makefile.am
addons/pvr.vuplus/: Makefile.am  addon.xml  addon.xml.in
addons/pvr.vuplus/resources/: settings.xml
addons/pvr.vuplus/resources/language/English/: strings.xml
addons/pvr.vuplus/resources/language/German/: strings.xml
src/: Makefile.am
src/vuplus/: HTTPConnection.cpp  HTTPConnection.h  Makefile.am  VuData.cpp  VuData.h  client.cpp  client.h  xmlParser.cpp
